<resources>
    <string name="app_name">Base</string>

    <!-- Pull Down text setting  -->
    <string name="refreshing">正在加载中</string>
    <!-- pull 上提 -->
    <string name="load_complete">加载完成</string>
    <string name="release_to_load">松开加载更多</string>
    <string name="pull_to_load">上拉加载更多</string>
    <!-- down 下拉 -->
    <string name="release_to_refresh">松开刷新</string>
    <string name="down_to_refresh">下拉刷新</string>
    <string name="refresh_complete">刷新完成</string>

    <!-- dialog 的确定取消按钮  -->
    <string name="base_ac_cancel">取消</string>
    <string name="base_ac_confirm">确定</string>


    <!-- BaseAty dialog 的确定取消按钮  -->
    <string name="base_ac_quit">再次点击将退出应用</string>

    <!-- 正在加载中 -->
    <string name="loading">正在加载中</string>
    <string name="net_wrong_retry">请检查你的网络</string>

    <!-- PhotoPopManager 用户信息修改头像弹窗 -->
    <string name="bottom_pop_top">相机</string>
    <string name="bottom_pop_middle">相册</string>

    <!-- 自定义密码输入框 -->
    <string name="password_input_forget">忘记密码?</string>
    <string name="password_input_cancel">取消</string>
    <string name="password_input_title">请输入支付密码</string>


    <string name="get_call_permission">当前没有拨打电话权限，是否申请拨打电话权限？</string>
    <string name="allow_call_permission">允许</string>
    <string name="please_open_call_permission">请打开拨打电话权限</string>
    <string name="get_permission_fail_title">获取权限失败</string>
    <string name="get_permission_fail_content">当前应用缺少必要权限，某些功能暂时无法使用。请单击【确定】按钮前往设置中心进行权限授权后再使用。</string>

</resources>
