<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:inputView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_dg_password_cancel"
            style="@style/base_dg_btn_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/password_input_cancel" />


        <TextView
            android:id="@+id/tv_dg_password_forget"
            style="@style/base_dg_btn_text"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/password_input_forget"
            android:textColor="@color/font_primary" />

    </RelativeLayout>

    <View style="@style/div_horizontal_1px" />

    <TextView
        style="@style/base_dg_title"
        android:paddingBottom="@dimen/padding_all_top_bottom"
        android:paddingTop="@dimen/padding_all_top_bottom"
        android:text="@string/password_input_title" />

    <View style="@style/div_horizontal_1px" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <com.yan.base.password.PasswordInputView
                android:id="@+id/piv_dg_password"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="@dimen/margin_all_top_bottom"
                android:layout_marginTop="@dimen/margin_all_top_bottom"
                inputView:passwordCount="6"
                inputView:radius="6dp"
                android:visibility="gone"
                inputView:stokeColor="@color/colorPrimary"
                inputView:symbolColor="@color/colorPrimary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"/>

            <com.yan.base.password.PasswordKeyboard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>